# avane_ck_rust_lib

./: .gitignore  Cargo.toml
src/: lib.rs
src/schemas/: mod.rs  struct_enums.rs  struct_google_api.rs  struct_migros.rs
src/services/: google_api_auth.rs  google_api_sheet.rs  migros.rs  mod.rs  psql.rs
src/utils/: encrypt.rs  http.rs  input.rs  logger.rs  mod.rs
