[package]
name = "avane_ck_rust_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = { version = "0.7", features = ["hazmat"] }
anyhow = "1.0.98"
base64 = "0.22.1"
block-modes = "0.8"
block-padding = "0.3.3"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = {version = "0.12.15", features = ["json", "blocking"]}
fern = "0.7.1"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
urlencoding = "2.1.3"
futures = "0.3.31"
tokio = {version = "1.45.0", features = ["full"]}